fixes ## spaces display on mobile

--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -69,7 +69,7 @@ button {
     }
 
     #bubble_desktop { display: none; }
-
+    
     .bubble-inner { background-color:#fff; border: solid 1px @grey_border;
 
         .bubble-tab { width:15px; background: transparent url('/static/img/tri-up.png') no-repeat; position:absolute; top: -7px; right: 15px; text-indent: -9999px; }
@@ -81,13 +81,16 @@ button {
         .bubble-info { width: 50px; height:32px; background: #e5e5e5 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 15px;
             .count { display: block; padding: 4px; text-align: center; font-weight: bold; color: @purple_text; font-size: 20px; margin-top: 1px; background-color: #e5e5e5; }
             .spaces { display: block; text-align: center; font-size: 11px; text-transform: uppercase; color: @grey_light; background-color: #e5e5e5; }
+            
         }
     }
 
     .actions { width: auto; float: right; text-align: right; height: 50px;  margin: 5px 10px 5px 0;
-    .bubble-info { width: 84px; height:32px; background: #e5e5e5 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 15px;
+    		.bubble-info { width: 84px; height:32px; background: #e5e5e5 url('/static/img/spinner.gif') no-repeat 50% 50%; background-size: 15px;
             .count { display: block; padding: 0px; text-align: center; font-weight: bold; color: @purple_text; font-size: 20px; margin-top: 1px; background-color: #e5e5e5; line-height: 20px; }
             .spaces { display: block; text-align: center; font-size: 10px; text-transform: uppercase; color: @grey_light; background-color: #e5e5e5; line-height: 10px; }
+            
+            
         }
 
 
@@ -96,10 +99,23 @@ button {
           }
         #done-clear-group { display:none;}
         #view_results_button { background:#514d83; .at2x('/static/img/check.png', 13px, 9px); background-repeat: no-repeat; background-position: 10px 50%; display: none; color: #8987ab; width: 30px; text-indent: -999px;  margin-bottom: 5px;}
-        #cancel_results_button { background: #e4e4e4;  .at2x('/static/img/cross.png', 8px, 9px); background-repeat:no-repeat; background-position: 10px 50%; display: none; color: #646464; width: 30px; text-indent: -999px; }
+        #cancel_results_button { background: #e4e4e4;  .at2x('/static/img/cross.png', 8px, 9px); background-repeat:no-repeat; background-position: 10px 50%; display: none; color: #646464; width: 30px; text-indent: -999px; &.btn  { border: 1px solid rgba(0,0,0,.3) !important; } }
 
         #back_home_button { background:#514d83 url('/static/img/left.png') no-repeat 8px 50%; display:inline-block; color: #8987ab; width: 30px; text-indent: -999px; }
+        #spacecount {
+    	//border: 1px rgba(0,0,0,.45) solid;
+    	margin-top: 4px;
+    	text-align: center;
+    	line-height: 30px;
+    	background-color: #c2c2c2;
+    	border-radius: 2px;
+    	//padding: 0 5px 0 4px;
+    	
     }
+
+    }
+    
+    
     #bubble_mobile {  margin: 10px 10px 5px 10px; }
 }
 
